--- a/base_model.ipynb
+++ b/base_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd25lYmHGrKZ4EjzkkZ49E"
+      "authorship_tag": "ABX9TyN9ak9jSSTs+S2w2aQqdnoX"
     },
     "kernelspec": {
       "name": "python3",
@@ -851,7 +851,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Let's redefine a preprocessing function to test model with new a message"
+        "##Let's redefine a preprocessing function to test the model"
       ],
       "metadata": {
         "id": "IeNHKgFclOJN"
